etc/iptables
# Generated by iptables-save v1.3.8 on Mon Nov 26 21:22:12 2007
*nat
:PREROUTING ACCEPT [1275:397950]
:POSTROUTING ACCEPT [74:5096]
:OUTPUT ACCEPT [74:5096]
COMMIT
# Completed on Mon Nov 26 21:22:12 2007
# Generated by iptables-save v1.3.8 on Mon Nov 26 21:22:12 2007
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [444:51722]
:RH-Firewall-1-INPUT - [0:0]
:badflags - [0:0]
-A INPUT -p udp -m udp --dport 1026:1027 -j DROP 
-A INPUT -i eth0 -p udp -m udp --dport 135:139 -j DROP 
-A INPUT -s 172.16.0.0/255.240.0.0 -i eth0 -j badflags 
-A INPUT -s 10.0.0.0/255.0.0.0 -i eth0 -j badflags 
-A INPUT -s 127.0.0.0/255.0.0.0 -i eth0 -j badflags 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j badflags 
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j badflags 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j badflags 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j badflags 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j badflags 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j badflags 
-A INPUT -j RH-Firewall-1-INPUT 
-A FORWARD -j RH-Firewall-1-INPUT 
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST,ACK SYN -m limit --limit 1/sec -j ACCEPT 
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec -j ACCEPT 
-A FORWARD -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT 
-A RH-Firewall-1-INPUT -i lo -j ACCEPT 
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A RH-Firewall-1-INPUT -s 192.168.1.102 -j ACCEPT 
-A RH-Firewall-1-INPUT -m limit --limit 15/min -j LOG --log-prefix "iptables: " --log-level 6 
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A RH-Firewall-1-INPUT -p udp -m udp --sport 500 --dport 500 -j ACCEPT 
-A RH-Firewall-1-INPUT -j DROP 
-A badflags -m limit --limit 15/min -j LOG --log-prefix "Badflags:" --log-level 2 
-A badflags -j DROP 
COMMIT
# Completed on Mon Nov 26 21:22:12 2007
